[web] Add: Fix li in iOS webview not responsible in first time, wrap the content in one a link

--- a/source/web/src/static/styles/intentionPage.less
+++ b/source/web/src/static/styles/intentionPage.less
@@ -82,6 +82,9 @@
             padding-top: 150px;
             display: inline-block;
             cursor: pointer;
+            a {
+                text-decoration:none;
+            }
             @media @phone{
                 width: 100%;
                 padding-top: 40px;
